hphp/test/slow/prop-type-hints/unset.php.expectf
Catchable fatal error: Unsetting property 'A::x' with type annotation in %s/unset.php on line 17
